RESOLVED FIXED207215
[macCatalyst] Missing custom cursors in subframes that are offset from the origin of the root view
https://bugs.webkit.org/show_bug.cgi?id=207215
Summary [macCatalyst] Missing custom cursors in subframes that are offset from the or...
Wenson Hsieh
Reported 2020-02-04 11:40:38 PST
Missing custom cursors in subframes that are offset from the origin of the root view
Attachments
Patch (2.83 KB, patch)
2020-02-04 12:08 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-02-04 11:44:22 PST
Wenson Hsieh
Comment 2 2020-02-04 12:08:21 PST
WebKit Commit Bot
Comment 3 2020-02-04 13:35:41 PST
Comment on attachment 389690 [details] Patch Clearing flags on attachment: 389690 Committed r255691: <https://trac.webkit.org/changeset/255691>
WebKit Commit Bot
Comment 4 2020-02-04 13:35:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.