Cherry-pick r255691. rdar://problem/59299315

[macCatalyst] Missing custom cursors in subframes that are offset from the origin of the root view
    https://bugs.webkit.org/show_bug.cgi?id=207215
    <rdar://problem/59157625>

    Reviewed by Tim Horton.

    <https://trac.webkit.org/r255046> added support for custom cursor styles when hovering over subframes. However,
    we currently try to hit-test content in the subframe using the interaction information request's point, which is
    in root view coordinates; as such, we only get the correct custom cursor styles when hovering over elements in a
    subframe, if the subframe is also at the origin of the root view.

    To fix this, simply convert from root view coordinates to frame coordinates when performing the hit-test.
    Unfortunately, this change is currently untestable; see <rdar://problem/59158410>.

    * WebProcess/WebPage/ios/WebPageIOS.mm:
    (WebKit::lineCaretExtent):

    Canonical link: https://commits.webkit.org/220207@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255691 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.256@safari-609.1.17.0-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609.1.17.0-branch@256547 268f45cc-cd09-0410-ab3c-d52691b4dbfc